@@ -1,0 +1,66 @@
+package org.jacp.javafx2.rcp.scheduler;
+
+import java.util.concurrent.ExecutionException;
+
+import javafx.event.Event;
+import javafx.event.EventHandler;
+
+import org.jacp.api.action.IAction;
+import org.jacp.api.component.ICallbackComponent;
+import org.jacp.javafx2.rcp.util.AFX2ComponentWorker;
+
+/**
+ * Component worker to run instances of a stateless component in a worker
+ * thread.
+ * 
+ * @author Andy Moncsek
+ * 
+ */
+public class StateLessComponentRunWorker
+		extends
+		AFX2ComponentWorker<ICallbackComponent<EventHandler<Event>, Event, Object>> {
+	private final ICallbackComponent<EventHandler<Event>, Event, Object> component;
+
+	public StateLessComponentRunWorker(
+			final ICallbackComponent<EventHandler<Event>, Event, Object> component) {
+		this.component = component;
+	}
+
+	@Override
+	protected ICallbackComponent<EventHandler<Event>, Event, Object> call()
+			throws Exception {
+		final ICallbackComponent<EventHandler<Event>, Event, Object> comp = this.component;
+		synchronized (comp) {
+			comp.setBlocked(true);
+			while (comp.hasIncomingMessage()) {
+				final IAction<Event, Object> myAction = comp
+						.getNextIncomingMessage();
+				comp.setHandleTarget(myAction.getSourceId());
+				final Object value = comp.handle(myAction);
+				final String targetId = comp.getHandleTargetAndClear();
+				this.delegateReturnValue(comp, targetId, value, myAction);
+			}
+			comp.setBlocked(false);
+		}
+		return comp;
+	}
+
+	@Override
+	protected void done() {
+		try {
+			this.get();
+		} catch (final InterruptedException e) {
+			e.printStackTrace();
+			// TODO add to error queue and restart thread if messages in
+			// queue
+		} catch (final ExecutionException e) {
+			e.printStackTrace();
+			// TODO add to error queue and restart thread if messages in
+			// queue
+		} finally {
+			// release lock
+			this.component.setBlocked(false);
+		}
+
+	}
+}
