@@ -1,7 +1,6 @@
 package org.jacp.javafx2.rcp.scheduler;
 
 import java.util.List;
-import java.util.concurrent.ExecutionException;
 import java.util.concurrent.atomic.AtomicInteger;
 
 import javafx.event.Event;
@@ -13,7 +12,6 @@ import org.jacp.api.component.IStateLessCallabackComponent;
 import org.jacp.api.launcher.Launcher;
 import org.jacp.api.scheduler.IStatelessComponentScheduler;
 import org.jacp.javafx2.rcp.component.AStatelessCallbackComponent;
-import org.jacp.javafx2.rcp.util.AFX2ComponentWorker;
 
 public class StatelessCallbackScheduler implements
 		IStatelessComponentScheduler<EventHandler<Event>, Event, Object> {
@@ -145,53 +143,5 @@ public class StatelessCallbackScheduler implements
 		return seek;
 	}
 
-	class StateLessComponentRunWorker
-			extends
-			AFX2ComponentWorker<ICallbackComponent<EventHandler<Event>, Event, Object>> {
-		private final ICallbackComponent<EventHandler<Event>, Event, Object> component;
-
-		public StateLessComponentRunWorker(
-				final ICallbackComponent<EventHandler<Event>, Event, Object> component) {
-			this.component = component;
-		}
-
-		@Override
-		protected ICallbackComponent<EventHandler<Event>, Event, Object> call()
-				throws Exception {
-			final ICallbackComponent<EventHandler<Event>, Event, Object> comp = this.component;
-			synchronized (comp) {
-				comp.setBlocked(true);
-				while (comp.hasIncomingMessage()) {
-					final IAction<Event, Object> myAction = comp
-							.getNextIncomingMessage();
-					comp.setHandleTarget(myAction.getSourceId());
-					final Object value = comp.handle(myAction);
-					final String targetId = comp.getHandleTargetAndClear();
-					this.delegateReturnValue(comp, targetId, value, myAction);
-				}
-				comp.setBlocked(false);
-			}
-			return comp;
-		}
-
-		@Override
-		protected void done() {
-			try {
-				this.get();
-			} catch (final InterruptedException e) {
-				e.printStackTrace();
-				// TODO add to error queue and restart thread if messages in
-				// queue
-			} catch (final ExecutionException e) {
-				e.printStackTrace();
-				// TODO add to error queue and restart thread if messages in
-				// queue
-			} finally {
-				// release lock
-				this.component.setBlocked(false);
-			}
-
-		}
-	}
-
+	
 }
